[package]
name = "crypt"
version = "0.1.0"
authors = ["Tomasz Flis <tflis84@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "^0.11.0"
hex = "^0.4.0"
rand = "0.7.2"
rust-crypto = "^0.2"
openssl = "0.10.26"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"