[package]
name = "crypt-config"
description = "A crypt module that encrypt/decrypt json data based on the configuration. This might be used as a layer before saving data in Mongo DB or after fetching the data from the DB in order to decrypt them."
license = "MIT"
version = "0.2.2"
authors = ["Tomasz Flis <tflis84@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "^0.12.0"
hex = "^0.4.0"
rand = "0.7.2"
rust-crypto = "^0.2"
notify = "^4.0.0"
openssl = "0.10.26"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
